# voca-app

./: .gitignore  .grype.yaml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  release.yml  sbom.yml  test.yml
docs/adr/: ADR-001-tauri-statt-electron.md  ADR-002-cloud-transkription.md  ADR-003-byo-api-key.md  ADR-004-json-storage.md
src/: App.tsx  StatusBar.tsx  UpdateToast.tsx  index.css  main.tsx
src-tauri/: .tarpaulin.toml  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/audio_ducking/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/fillers/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/local_transcription/: mod.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/storage/: dictionary_seeds.rs  mod.rs
src-tauri/src/target_app/: labels.rs  mod.rs
src-tauri/src/transcription/: mod.rs
src-tauri/src/vad/: mod.rs
src/components/settings/: ApiKeyField.tsx  SettingRow.tsx  ShortcutRecorder.tsx  Toggle.tsx
src/hooks/: useApiKey.ts  useAppState.ts  useErrorListener.ts  useSettings.ts  useShortcutCapture.ts  useShortcutFallback.ts  useTranscriptionListener.ts
src/i18n/: detectOsLocale.test.ts  detectOsLocale.ts  index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json
src/legal/: privacy.de.md  privacy.en.md  terms.de.md  terms.en.md
src/pages/: AboutPage.tsx  HistoryPage.tsx  LegalPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  StatsPage.tsx
src/pages/settings/: AiSettings.tsx  DictionarySettings.tsx  FillersSettings.tsx  GeneralSettings.tsx  SnippetsSettings.tsx  TranscriptionSettings.tsx
src/shortcut/: captureState.ts  format.test.ts  format.ts
src/stores/: appStore.ts
src/types/: index.ts
