[package]
name = "voca"
version = "0.1.0"
description = "VOCA – Speech-to-Text Desktop App"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "voca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voca"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
cpal = "0.15"
hound = "3.5"
keyring = "2"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
arboard = "3"
enigo = "0.2"
whisper-rs = "0.16"
tokio = { version = "1", features = ["fs", "rt"] }
base64 = "0.22"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
