[package]
name = "voca"
version = "0.3.3"
description = "VOCA – Speech-to-Text Desktop App"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "voca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voca"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
cpal = "0.15"
hound = "3.5"
keyring = "2"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
arboard = "3"
enigo = "0.2"
whisper-rs = "0.16"
silero = "0.4"
tokio = { version = "1", features = ["fs", "rt", "time"] }
base64 = "0.22"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
